-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9
-
None
-
cbce69ebd (dev), b6557e4be (6.9)
Introduced by 9f22a51987614ce51b3c12ced420bc4ca5b1ec61.
C:/Qt/qt6/qtbase/src/gui/text/windows/qwindowsfontenginedirectwrite.cpp: In lambda function:
C:/Qt/qt6/qtbase/src/gui/text/windows/qwindowsfontenginedirectwrite.cpp:1034:49: error: no matching function for call to 'IDWritePaintReader::MoveToFirstChild(DWRITE_PAINT_ELEMENT*)'
1034 | if (FAILED(paintReader->MoveToFirstChild(&childPaintElement)))
| ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
In file included from C:/Qt/qt6/qtbase/src/gui/text/windows/qwindowsfontenginedirectwrite.cpp:22:
C:/msys/ucrt64/include/dwrite_3.h:10457:39: note: candidate: 'virtual HRESULT IDWritePaintReader::MoveToFirstChild(DWRITE_PAINT_ELEMENT*, UINT32)'
10457 | virtual HRESULT STDMETHODCALLTYPE MoveToFirstChild(
| ^~~~~~~~~~~~~~~~
C:/msys/ucrt64/include/dwrite_3.h:10457:39: note: candidate expects 2 arguments, 1 provided
C:/Qt/qt6/qtbase/src/gui/text/windows/qwindowsfontenginedirectwrite.cpp:1040:58: error: no matching function for call to 'IDWritePaintReader::MoveToNextSibling(DWRITE_PAINT_ELEMENT*)'
1040 | if (FAILED(paintReader->MoveToNextSibling(&childPaintElement))) {
| ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
C:/msys/ucrt64/include/dwrite_3.h:10461:39: note: candidate: 'virtual HRESULT IDWritePaintReader::MoveToNextSibling(DWRITE_PAINT_ELEMENT*, UINT32)'
10461 | virtual HRESULT STDMETHODCALLTYPE MoveToNextSibling(
| ^~~~~~~~~~~~~~~~~
C:/msys/ucrt64/include/dwrite_3.h:10461:39: note: candidate expects 2 arguments, 1 provided